<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_label" translatable="false">WebDAV</string>
    <string name="app_name_release" translatable="false">WebDAV Provider</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">WebDAV Provider (Debug)</string>
    <string name="action_about">About</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_details">Details</string>
    <string name="action_copy">Copy</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="protocol">Protocol</string>
    <string name="verify_certs">Verify certificates</string>
    <string name="act_as_local_storage">Act as Local Storage</string>
    <string name="section_authentication">Authentication</string>
    <string name="section_connection_info">Connection info</string>
    <string name="section_advanced">Advanced</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="client_certificate">Client certificate</string>
    <string name="notice_no_client_certificate">No certificate selected or no certificate(s) installed, see: Settings > Security > Encryption &amp; credentials</string>
    <string name="notice_http_client_certificate">Client certificate requires an HTTPS connection</string>

    <string name="add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="empty_account_list">No accounts found</string>
    <string name="empty_account_list_description">There are no accounts to be shown. Add one by tapping the plus sign in the bottom right corner.</string>
    <plurals name="account_selection">
        <item quantity="one">%d account selected</item>
        <item quantity="other">%d accounts selected</item>
    </plurals>
    <string name="about_support">Support</string>
    <string name="about_support_rate">Rate</string>
    <string name="about_support_rate_description">Support us by leaving a review in the Google Play Store</string>
    <string name="about_author">Author</string>
    <string name="about_author_roclidev" translatable="false">Rocli Development</string>
    <string name="about_country_netherlands">Netherlands</string>
    <string name="about_send_email">Send us an email</string>
    <string name="about_license">License</string>
    <string name="about_license_description">WebDAV Provider is licensed under GPLv3</string>
    <string name="about_third_party_libraries">Third-party libraries</string>
    <string name="about_third_party_libraries_description">A list of the used third-party libraries and their licenses</string>
    <string name="about_github">GitHub</string>
    <string name="about_github_description">Source code, issues and other information</string>
    <string name="about_changelog">Changelog</string>
    <string name="about_changelog_description">What\'s new</string>

    <string name="about_data_email" translatable="false">support+webdav@rocli.dev</string>
    <string name="about_data_github" translatable="false">https://github.com/alexbakker/webdav-provider</string>
    <string name="about_data_author_website" translatable="false">https://rocli.dev</string>
    <string name="about_data_playstore" translatable="false">https://play.google.com/store/apps/details?id=dev.rocli.android.webdav</string>

    <string name="toast_version_copied">Version copied to the clipboard</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_discard_changes">Discard changes?</string>
    <string name="dialog_message_discard_changes">Your changes have not been saved</string>
    <plurals name="dialog_title_delete_accounts">
        <item quantity="one">Delete account</item>
        <item quantity="other">Delete accounts</item>
    </plurals>
    <plurals name="dialog_message_delete_accounts">
        <item quantity="one">Are you sure you want to delete %d account?</item>
        <item quantity="other">Are you sure you want to delete %d accounts?</item>
    </plurals>

    <string name="webdav_testing_connection">Testing WebDAV…</string>
    <string name="label_max_cache_file_size">Maximum size of files to cache:</string>
    <string name="value_max_cache_file_size">%d MB</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_url">This must be a valid HTTP/HTTPS URL</string>
    <string name="error_webdav_connection">Couldn\'t establish a WebDAV connection: %s</string>
    <string name="error_webdav_connection_dialog">An error occurred while trying to establish a WebDAV connection</string>
    <string name="error_list_dir_contents">An error occurred while trying to list the contents of %1$s:\n\n%2$s</string>
    <string name="error_documentsui">Unable to start DocumentsUI</string>
    <string name="error_documentsui_dialog">An error occurred while trying to open the WebDAV location in DocumentsUI</string>

    <!-- Authorization Headers -->
    <string name="section_authorization_headers">Authorization headers</string>
    <string name="header_profile">Header profile</string>
    <string name="header_profile_none">None</string>
    <string name="header_profile_cloudflare">Cloudflare Access</string>
    <string name="header_profile_custom">Custom headers</string>
    <string name="cf_access_client_id">Client ID</string>
    <string name="cf_access_client_secret">Client Secret</string>
    <string name="cf_access_helper_text">Cloudflare expects these headers on each request to an Access-protected app when the policy action is Service Auth.</string>
    <string name="custom_headers_title">Custom Headers</string>
    <string name="custom_header_name">Header name</string>
    <string name="custom_header_value">Header value</string>
    <string name="custom_header_add">Add header</string>
    <string name="custom_header_empty">No custom headers configured</string>
    <string name="custom_header_empty_description">Tap \"Add header\" to add a custom HTTP header.</string>
    <string name="custom_header_treat_as_secret">Treat as secret</string>
    <string name="custom_header_enabled">Enabled</string>
    <string name="custom_header_warning_dangerous">Warning: Modifying this header may cause unexpected behavior</string>
    <string name="error_header_name_required">Header name is required</string>
    <string name="error_header_name_invalid">Header name contains invalid characters</string>
</resources>
