<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable name="isEmpty" type="Boolean" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_custom_headers"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="80dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="@{isEmpty ? View.GONE : View.VISIBLE}" />

        <!-- Empty state view -->
        <LinearLayout
            android:id="@+id/view_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{isEmpty ? View.VISIBLE : View.GONE}">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_outline_description_24"
                android:contentDescription="@string/custom_header_empty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_header_empty"
                android:paddingTop="17dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:paddingTop="7dp"
                android:text="@string/custom_header_empty_description"
                android:textAlignment="center" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_add_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:text="@string/custom_header_add"
            app:icon="@drawable/ic_outline_add_24" />

    </LinearLayout>
</layout>
